--- a/html/list.html
+++ b/html/list.html
@@ -27,7 +27,7 @@
 				<a href="/create" class="button_big">MAKE A VIDEO</a>
 			</div>
 		</div>
-		<div class="warning">GoAnimate Retro Rewrapped is almost done! i got the character creator & the old html 5 ccbrowser inserted. the character creator loads fine but does not load any stuff to it witch i will be working on the fix. the ccbrowser in html 5 does not work at all along with the old lvp. i am also working on thoose 2 fixes. but the studio works fine because that is the only thing that is uasble right now in this development world of GoAnimate.</a>
+		<div class="warning">GoAnimate 2013 is a great site to be in. there were tutorials on youtube teaching you how to use GoAnimate in that style. now it's returning once again!</a>
 		</div>
 	</header>
 	<table>
